--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
   </div>
 
   <div id="product-modal" class="modal hidden" role="dialog" aria-labelledby="product-modal-title" aria-modal="true">
-    <!-- Product details will be injected here -->
   </div>
-
+  <footer><h2>This is used for testing web accessibilty checker tools and screen recorders like nvda</h2></footer>
   <script>
     let users = [];
     let cart = [], orders = [];
