--- a/index.html
+++ b/index.html
@@ -389,5 +389,23 @@
 
     window.onload = displayProducts;
   </script>
+  <footer role="contentinfo" aria-label="Website Footer" style="background: #333; color: white; padding: 20px 0; text-align: center;">
+  <div style="max-width: 1200px; margin: auto; padding: 0 20px;">
+    <p> E-Commerce Store</p>
+    
+    <nav aria-label="Footer navigation">
+      <a href="#" onclick="showSection('about-us')" style="color: white; margin: 0 10px;">About Us</a>
+      <a href="#" onclick="showSection('orders')" style="color: white; margin: 0 10px;">My Orders</a>
+      <a href="#" onclick="showSection('all-products')" style="color: white; margin: 0 10px;">Products</a>
+      <a href="#" onclick="openLogin()" style="color: white; margin: 0 10px;">Login</a>
+    </nav>
+
+    <p>
+      <a href="mailto:support@example.com" style="color: white;" aria-label="Email support">support@example.com</a> |
+      <a href="tel:+1234567890" style="color: white;" aria-label="Call support">+1 (234) 567-890</a>
+    </p>
+  </div>
+</footer>
+
 </body>
 </html>
